# Q3_GIAIC_Hackathon_02_Phase_03

./: .env.example  .gitignore  CLAUDE.md
.claude/: settings.local.json
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/examples/: agent_demo.py
backend/scripts/: validate_mcp_tools.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/agent/: __init__.py  agent.py  context.py  prompts.py  runner.py  tools.py
backend/src/api/: __init__.py  auth.py  chat.py  conversations.py  reminders.py  tasks.py
backend/src/mcp/: __init__.py  errors.py  schemas.py  server.py
backend/src/mcp/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  list_tasks.py  schedule_reminder.py  update_task.py
backend/src/middleware/: __init__.py  auth.py
backend/src/models/: __init__.py  conversation.py  message.py  reminder.py  task.py  user.py
backend/src/schemas/: __init__.py  auth.py  chat.py  conversation.py  reminder.py  task.py
backend/src/services/: __init__.py  auth_service.py  chat_service.py  conversation_service.py  reminder_service.py  task_service.py
backend/tests/: test_auth.py  test_conversations.py  test_health.py  test_persistence.py  test_tasks.py
backend/tests/agent/: __init__.py  conftest.py  test_agent.py  test_context.py  test_integration.py  test_tools.py
backend/tests/mcp/: __init__.py  conftest.py  test_add_task.py  test_all_tools.py  test_complete_task.py  test_delete_task.py  test_list_tasks.py  test_schedule_reminder.py  test_update_task.py
db/: user_Mesum.json
frontend/: CLAUDE.md  middleware.ts  (+2 more)
(+167 files in other folders)
